4th commit, bugs seem fixed, Dealing with a white black page.

--- a/template/stocks.html
+++ b/template/stocks.html
@@ -3,6 +3,7 @@
 <head>
     <title>Stock Price Dashboard</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
 
 </head>
